# Optimization

./: .bazelignore  .bazelrc  .gitignore  BFGS.h  BUILD  CMakeLists.txt  Dockerfile  JET.h  LBFGS.h  README.md  WORKSPACE  gradient_checker.h  gradient_decent.h  itertive_method_test.cpp  linear_programing.cc  linear_programing.h  linear_search.h  linear_solver.h  linear_solver_test.cpp  lp_solver.cpp  lu.h  mmio.h  optimization_test.cpp  reduce.cc  sparse_matrix_test.cpp
.github/workflows/: c-cpp.yml
Graph/: BUILD  CMakeLists.txt  graph.cc  graph.h  graph_normal_cut.cc  graph_normal_cut.h  graph_test_main.cc
IO/: BUILD  build.sh  mps.lex  mps.ll  mps.y  mps_format_io.cc  mps_format_io.h
RGD/: BUILD  CMakeLists.txt  conjugate_gradient.cc  conjugate_gradient.h  conjugate_gradient_test.cc  gradient_checker.h  manifold.h  rgd.cc  rgd.h  rgd_cost_function_interface.h  rgd_test.cc  so3_cost_function_interface.h  trust_region_subproblem.cc  trust_region_subproblem.h  trust_region_subproblem_test.cc
algebra_op/: BUILD  algebra_operation.cc  algebra_operation.h
bal/: BUILD  CMakeLists.txt  admm_bal_solver.cc  admm_bal_solver.h  bal_main.cc  bal_solver.h  bal_test.cc  ceres_bal_solver.cc  ceres_bal_solver.h  cgraph_test.cc  cost_function.cc  cost_function.h  cost_function_auto.h  cost_function_test.cc  daba_bal_solver.cc  daba_bal_solver.h  daba_subproblem.cc  daba_subproblem.h  daba_subproblem_manager.cc  daba_subproblem_manager.h  distributed_pcg_solver.cc  distributed_pcg_solver.h  evaluate.cc  evaluate.h  load_problem.cc  load_problem.h  problem.h
bal/tiny_grad_solver/: problem.py
bazel/: deps.bzl
data/Hamming/10_2/: A_sparse.txt  b.txt  c.txt
data/Hamming/11_2/: A_sparse.txt  b.txt
data/Hamming/7_5_6/: A_sparse.txt  b.txt  c.txt
data/Hamming/8_3_4/: A_sparse.txt  b.txt  c.txt
data/Hamming/9_5_6/: A_sparse.txt  b.txt  c.txt
data/Hamming/9_8/: A_sparse.txt  b.txt  c.txt
first_order_methods/: CMakeLists.txt  back_tracking.h  first_oracle.h  first_order_methods_test.cc  gradient_descent.cc  gradient_descent.h
lp/: BUILD  linear_programing.cc  linear_programing.h  linear_programing_test.cc
programing/: BUILD  CMakeLists.txt  linear_programing.cc  linear_programing.h  linear_programing_optimized.cc  linear_solver_test.cpp  mps_problem.h  mps_reader.cc  solve_mps.cc
rotation_averaging/: BUILD  rotation.h  rotation_averaging.cc  rotation_averaging.h  rotation_averaging_test.cc
solver/: BUILD  CMakeLists.txt  lm.cc  lm.h  solver_test.cc
test_code/: BFGS.h  LinearProgramingConfig.h.in  gradient_checker.h  gradient_decent.h  itertive_method_test.cpp  k_mean.h  linear_programing.h  linear_solver_test.cpp  reduce.h  sparse_matrix.h  sparse_matrix_test.cpp
